add my portrait

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I am Tony</strong>, a brief look<br />
-					of my free projects and future tasks<br />
-					see more <a href="http://tonychung.cc">Tony's Bio</a>.</h1>
+					<h1><strong>I am Tony</strong>, <br />
+					a brief look of my hobbyist projects and future tasks<br />
+					see more <a href="http://tonychung.cc">My Bio</a>.</h1>
 				</div>
 			</header>
 
