--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1><strong>I am Tony</strong>, <br />
 					a brief look of my hobbyist projects and future tasks<br />
-					see more <a href="http://tonychung.cc">My Bio</a>.</h1>
+					see more <a href="https://tonychung.cc">My Bio</a>.</h1>
 				</div>
 			</header>
 
