--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+					<a href="images/avatar.jpg" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1><strong>I am Tony</strong>, <br />
 					a brief look of my hobbyist projects and future tasks<br />
 					see more <a href="https://tonychung.cc">My Bio</a>.</h1>
