--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 			<header id="header">
 				<div class="inner">
 					<a href="images/avatar.jpg" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I am Tony</strong>, <br />
-					a brief look of my hobbyist projects and future tasks<br />
-					see more <a href="https://tonychung.cc">My Bio</a>.</h1>
+					<h1><strong>I am Tony</strong>, a software engineer in Taiwan<br />
+					below are my hobbyist projects and future tasks<br />
+					see <a href="https://tonychung.cc">My Bio</a>.</h1>
 				</div>
 			</header>
 
@@ -29,10 +29,10 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
-							magna sed accumsan arcu neque.</h2>
+							<h2>My Projects<br />
+							<a href="https://freetools.uk">FreeTools.uk</a></h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<p>all free tools I made are listed in the <a href="https://freetools.uk">FreeTools.uk</a></p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
