--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 				<div class="inner">
 					<a href="images/avatar.jpg" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1><strong>I am Tony</strong>, a software engineer in Taiwan<br />
-					below are my hobbyist projects and future tasks<br />
-					see <a href="https://tonychung.cc">My Bio</a>.</h1>
+					below are my hobbyist projects.<br /></h1>
 				</div>
 			</header>
 
