try div to section two

--- a/index.html
+++ b/index.html
@@ -28,12 +28,13 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>My Projects<br />
+							<h2>All of My Projects are free to use.<br />
 							<a href="https://freetools.uk">FreeTools.uk</a></h2>
 						</header>
 						<p>all free tools I made are listed in the <a href="https://freetools.uk">FreeTools.uk</a></p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<!-- <li><a href="#" class="button">Learn More</a></li> -->
+							<li><div href="two" class="button">Learn More</div></li>
 						</ul>
 					</section>
 
