--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="images/avatar.jpg" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1><strong>I am Tony</strong>, a software engineer in Taiwan<br />
 					below are my hobbyist projects.<br /></h1>
 				</div>
@@ -29,9 +29,12 @@
 					<section id="one">
 						<header class="major">
 							<h2>All of My Projects are free to use.<br />
-							<a href="https://freetools.uk">FreeTools.uk</a></h2>
+							and will always be free.</h2>
 						</header>
-						<p>all free tools I made are listed in the <a href="https://freetools.uk">FreeTools.uk</a></p>
+						<p>Current Projects: <br />
+						1. My Bio: tonychung.cc <br />
+						2. All Freetools I made: freetools.uk<br />
+						3. IoT devices automation: tthome.uk</p>
 						<ul class="actions">
 							<!-- <li><a href="#" class="button">Learn More</a></li> -->
 							<li><div href="two" class="button">Learn More</div></li>
