--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<section id="one">
 						<header class="major">
 							<h2>All of My Projects are free to use.<br />
-							and will always be free.</h2>
+							and will always be free.<br /></h2>
 						</header>
 						<p>Current Projects: <br />
 						1. My Bio: tonychung.cc <br />
