--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						3. IoT devices automation: tthome.uk</p>
 						<ul class="actions">
 							<!-- <li><a href="#" class="button">Learn More</a></li> -->
-							<li><div href="#" class="button">Learn More</div></li>
+							<li><div href="#two" class="button">Learn More</div></li>
 						</ul>
 					</section>
 
@@ -77,7 +77,7 @@
 							</article>
 						</div>
 						<ul class="actions">
-							<li><a href="one" class="button">Full Portfolio</a></li>
+							<li><a href="#one" class="button">Full Portfolio</a></li>
 						</ul>
 					</section>
 
