--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>All of My Projects are free to use.<br />
-							and will always be free.<br /></h2>
+							<h2>
+								All of My Projects are free to use<br />
+								and will always be free.
+							</h2>
 						</header>
 						<p>Current Projects: <br />
 						1. My Bio: tonychung.cc <br />
@@ -37,7 +39,7 @@
 						3. IoT devices automation: tthome.uk</p>
 						<ul class="actions">
 							<!-- <li><a href="#" class="button">Learn More</a></li> -->
-							<li><div href="#two" class="button">Learn More</div></li>
+							<li><a href="#two" class="button">Learn More</div></li>
 						</ul>
 					</section>
 
