--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>All of My Projects are free to use<br />
-								and will always be free.</h2>
+							<h2>All of My Projects are free to use.<br /></h2>
 						</header>
 						<p>Current Projects: <br />
 						1. My Bio: tonychung.cc <br />
