add section 3: My TODO List

--- a/index.html
+++ b/index.html
@@ -80,6 +80,21 @@
 					</section>
 
 				<!-- Three -->
+					<section id="three">
+					    <h2>My TODO List</h2>
+					    <ul class="alt">
+					        <li>✅ Launch new version of freetools.uk</li>
+					        <li>🛠️ add free backup google photos function in freetools.uk</li>
+					        <li>📦 add a lot of free tools.</li>
+					        <li>📚 Launch init version of tthome.uk</li>
+					        <li>✍️ Write a blog post about all these projects</li>
+					    </ul>
+					    <ul class="actions">
+					        <li><a href="#header" class="button">Back on Top</a></li>
+					    </ul>
+					</section>
+
+				<!-- Three -->
 					<!-- <section id="three">
 						<h2>Get In Touch</h2>
 						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
