--- a/index-demo.html
+++ b/index-demo.html
@@ -15,6 +15,7 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6458752087753579"
      crossorigin="anonymous"></script>
+		<meta name="google-adsense-account" content="ca-pub-6458752087753579">
 	</head>
 	<body class="is-preload">
 
