--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6458752087753579"
+		crossorigin="anonymous"></script>
+		<meta name="google-adsense-account" content="ca-pub-6458752087753579">
 	</head>
 	<body class="is-preload">
 
