add google analysis

--- a/index.html
+++ b/index.html
@@ -10,9 +10,23 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		
+		
+		
+		<!-- Google ads -->
 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6458752087753579"
 		crossorigin="anonymous"></script>
 		<meta name="google-adsense-account" content="ca-pub-6458752087753579">
+
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-M0Z53L9SQC"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+		
+		  gtag('config', 'G-M0Z53L9SQC');
+		</script>		
 	</head>
 	<body class="is-preload">
 
