add freetools url and logo

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1><strong>I am Tony</strong>, a software engineer in Taiwan<br />
-					below are my hobbyist projects.<br /></h1>
+					listed my hobbyist projects below.<br /></h1>
 				</div>
 			</header>
 
@@ -45,15 +45,19 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>All of My Projects are free to use.<br /></h2>
+							<h2>All of My Projects are free to use.<br />
+							buy me a coffee if you like my work. thanks.<br />
+							</h2>
 						</header>
-						<p>Current Projects: <br />
+
+						<!-- <p>Current Projects: <br />
 						1. My Bio: tonychung.cc <br />
 						2. All Freetools I made: freetools.uk<br />
-						3. IoT devices automation: tthome.uk</p>
-						<ul class="actions">
+						3. IoT devices automation: tthome.uk</p> -->
+
+						<!-- <ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
-						</ul>
+						</ul> -->
 					</section>
 
 				<!-- Two -->
@@ -61,11 +65,11 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="https://freetools.uk/" class="image fit thumb"><img src="images/thumbs/FreeToolsUK_logo.png" alt="" /></a>
+								<h3>https://freetools.uk/</h3>
+								<p>Contains some freetools such as google photos backup...etc</p>
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
+							<!-- <article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
 								<h3>Ultricies lacinia interdum</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
@@ -89,7 +93,7 @@
 								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
 								<h3>Risus ornare lacinia</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
+							</article> -->
 						</div>
 						<ul class="actions">
 							<li><a href="#one" class="button">Full Portfolio</a></li>
@@ -100,10 +104,8 @@
 					<section id="three">
 					    <h2>My TODO List</h2>
 					    <ul class="alt">
-					        <li>✅ Launch new version of freetools.uk</li>
-					        <li>🛠️ add free backup google photos function in freetools.uk</li>
-					        <li>📦 add a lot of free tools.</li>
-					        <li>📚 Launch init version of tthome.uk</li>
+					        <li>🛠️ add backup google photos in freetools.uk</li>
+					        <li>📦 add a lot of useful free tools in freetools.uk.</li>
 					        <li>✍️ Write a blog post about all these projects</li>
 					    </ul>
 						<script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="tonychung" data-color="#FFDD00" data-emoji=""  data-font="Cookie" data-text="Buy me a coffee" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#ffffff" ></script>
