--- a/index.html
+++ b/index.html
@@ -66,9 +66,14 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://freetools.uk/" class="image fit thumb"><img src="images/thumbs/FreeToolsUK_logo.png" alt="" /></a>
 								<h3>https://freetools.uk/</h3>
 								<p>Contains some freetools such as google photos backup...etc</p>
+
+								<li><a href="#two" class="image fit thumb"><img src="images/thumbs/FreeToolsUK_logo.png" alt="" /></a></li>
+								<li><a href="https://freetools.uk/" class="button">Link to FreeTools</a></li>
+								<ul class="actions">
+									<li><a href="https://freetools.uk/" class="button">Full Portfolio</a></li>
+								</ul>
 							</article>
 							<!-- <article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
@@ -96,9 +101,6 @@
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article> -->
 						</div>
-						<ul class="actions">
-							<li><a href="#one" class="button">Full Portfolio</a></li>
-						</ul>
 					</section>
 
 				<!-- Three -->
