--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 								<p>Contains some freetools such as google photos backup...etc</p>
 
 								<li><a href="#two" class="image fit thumb"><img src="images/thumbs/FreeToolsUK_logo.png" alt="" /></a></li>
-								<li><a href="https://freetools.uk/" class="button">Link to FreeTools</a></li>
+								<!-- <li><a href="https://freetools.uk/" class="button">Link to FreeTools</a></li> -->
 								<ul class="actions">
-									<li><a href="https://freetools.uk/" class="button">Full Portfolio</a></li>
+									<li><a href="https://freetools.uk/" class="button">Link to FreeTools</a></li>
 								</ul>
 							</article>
 							<!-- <article class="col-6 col-12-xsmall work-item">
