rm <li> from logo img

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 								<h3>https://freetools.uk/</h3>
 								<p>Contains some freetools such as google photos backup...etc</p>
 
-								<li><a href="#two" class="image fit thumb"><img src="images/thumbs/FreeToolsUK_logo.png" alt="" /></a></li>
+								<a href="#two" class="image fit thumb"><img src="images/thumbs/FreeToolsUK_logo.png" alt="" /></a>
 								<!-- <li><a href="https://freetools.uk/" class="button">Link to FreeTools</a></li> -->
 								<ul class="actions">
 									<li><a href="https://freetools.uk/" class="button">Link to FreeTools</a></li>
