--- a/index.html
+++ b/index.html
@@ -66,15 +66,16 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<h3>https://freetools.uk/</h3>
-								<p>Contains some freetools such as google photos backup...etc</p>
-
 								<a href="#two" class="image fit thumb"><img src="images/thumbs/FreeToolsUK_logo.png" alt="" /></a>
 								<!-- <li><a href="https://freetools.uk/" class="button">Link to FreeTools</a></li> -->
-								<ul class="actions">
-									<li><a href="https://freetools.uk/" class="button">Link to FreeTools</a></li>
-								</ul>
+								<h3>https://freetools.uk/</h3>
+								<p>Contains some freetools such as google photos backup, calc...etc</p>
 							</article>
+							<ul class="actions">
+								<li><a href="https://drive.freetools.uk/" class="button">Link to FreeTools Drive</a></li>
+								<li><a href="https://calc.freetools.uk/" class="button">Link to FreeTools Calc</a></li>
+							</ul>
+
 							<!-- <article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
 								<h3>Ultricies lacinia interdum</h3>
