--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
 							</article>
 							<ul class="actions">
 								<li><a href="https://drive.freetools.uk/" class="button">Link to FreeTools Drive</a></li>
+							</ul>
+							<ul class="actions">
 								<li><a href="https://calc.freetools.uk/" class="button">Link to FreeTools Calc</a></li>
 							</ul>
 
