--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="#two" class="image fit thumb"><img src="images/thumbs/FreeToolsUK_logo.png" alt="" /></a>
+								<!-- <a href="#two" class="image fit thumb"><img src="images/thumbs/FreeToolsUK_logo.png" alt="" /></a> -->
 								<!-- <li><a href="https://freetools.uk/" class="button">Link to FreeTools</a></li> -->
+								<a href="#two" class="actions"><img src="images/thumbs/FreeToolsUK_logo.png" alt="" /></a>
 								<h3>https://freetools.uk/</h3>
 								<p>Contains some freetools such as google photos backup, calc...etc</p>
 							</article>
