--- a/index.html
+++ b/index.html
@@ -67,12 +67,17 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://calc.freetools.uk/" class="image fit thumb"><img src="images/thumbs/FreeToolsUK_logo.png" alt="" /></a>
-								<h3>https://freetools.uk/</h3>
-								<p>Contains some freetools such as google photos backup, calc...etc</p>
+								<ul class="alt">
+									<li><h3>https://freetools.uk/</h3></li>
+									<li><p>Contains some freetools such as google photos backup, calc...etc</p></li>
+								</ul>
+								
+
+								<ul class="actions">
+									<li><a href="https://drive.freetools.uk/" class="button">Link to FreeTools Drive</a></li>
+								</ul>
 							</article>
-							<ul class="actions">
-								<li><a href="https://drive.freetools.uk/" class="button">Link to FreeTools Drive</a></li>
-							</ul>
+							
 							<!-- <ul class="actions">
 								<li><a href="https://calc.freetools.uk/" class="button">Link to FreeTools Calc</a></li>
 							</ul> -->
