--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://calc.freetools.uk/" class="image fit thumb"><img src="images/thumbs/FreeToolsUK_logo.png" alt="" /></a>
+								<!-- <a href="https://calc.freetools.uk/" class="image fit thumb"></a> -->
+								<img class= "image fit thumb" src="images/thumbs/FreeToolsUK_logo.png" alt="" />
 								<ul class="alt">
 									<li><p><h3>https://freetools.uk/</h3></p></li>
 									<li><p>Contains some freetools such as google photos backup, calc...etc</p></li>
