--- a/index.html
+++ b/index.html
@@ -69,13 +69,11 @@
 								<!-- <a href="https://calc.freetools.uk/" class="image fit thumb"></a> -->
 								<img class= "image fit thumb" src="images/thumbs/FreeToolsUK_logo.png" alt="" />
 								<ul class="alt">
-									<li><p><h3>https://freetools.uk/</h3></p></li>
 									<li><p>Contains some freetools such as google photos backup, calc...etc</p></li>
 								</ul>
-								
-
 								<ul class="actions">
 									<li><a href="https://drive.freetools.uk/" class="button">Link to FreeTools Drive</a></li>
+									<li><a href="https://calc.freetools.uk/" class="button">Link to FreeTools Calc</a></li>
 								</ul>
 							</article>
 							
