--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 									<li><p>Contains some freetools such as google photos backup, calc...etc</p></li>
 								</ul>
 								<ul class="actions">
-									<li><a href="https://drive.freetools.uk/" class="button">Link to FreeTools Drive</a></li>
-									<li><a href="https://calc.freetools.uk/" class="button">Link to FreeTools Calc</a></li>
+									<li><a href="https://freetools.uk/" class="button">Link to FreeTools</a></li>
+									<!-- <li><a href="https://calc.freetools.uk/" class="button">Link to FreeTools Calc</a></li> -->
 								</ul>
 							</article>
 							
