--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 								<!-- <a href="https://calc.freetools.uk/" class="image fit thumb"></a> -->
 								<img class= "image fit thumb" src="images/thumbs/FreeToolsUK_logo.png" alt="" />
 								<ul class="alt">
-									<li><p>Contains some freetools such as google photos backup, calc...etc</p></li>
+									<li><p>Contains some freetools such as google photos backup, youtube playlist player...etc</p></li>
 								</ul>
 								<ul class="actions">
 									<li><a href="https://freetools.uk/" class="button">Link to FreeTools</a></li>
