--- a/index.html
+++ b/index.html
@@ -113,8 +113,7 @@
 					<section id="three">
 					    <h2>My TODO List</h2>
 					    <ul class="alt">
-					        <li>🛠️ add backup google photos in freetools.uk</li>
-					        <li>📦 add a lot of useful free tools in freetools.uk.</li>
+					        <li>🛠️  add a lot of useful free tools in freetools.uk.</li>
 					        <li>✍️ Write a blog post about all these projects</li>
 					    </ul>
 
