update email to bio page

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1><strong>I am Tony</strong>, a software engineer in Taiwan<br />
 					listed my hobbyist projects below.<br /></h1>
+					<h2>email: contact@tonychung.cc</h2>
 				</div>
 			</header>
 
