--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<!-- <a href="https://calc.freetools.uk/" class="image fit thumb"></a> -->
-								<img class= "image fit thumb" src="images/thumbs/FreeToolsUK_logo.png" alt="" />
+								<!-- <img class= "image fit thumb" src="images/thumbs/FreeToolsUK_logo.png" alt="" /> -->
+								<img class= "image fit thumb" src="images/thumbs/FT_FreeTools_LOGO.svg" alt="" />
 								<ul class="alt">
 									<li><p>Contains some freetools such as youtube playlist player...etc</p></li>
 								</ul>
